Fixed link spacing in the sidebar.
Reduced/tweaked link margin on ”Läs mer”.

--- a/talentum/nyteknik/css/screen.css
+++ b/talentum/nyteknik/css/screen.css
@@ -4519,15 +4519,18 @@ UL.tags,
 }
 
 .links a {
-    
     color: #669fe0;
 }
 
 .links LI {
-    
     color: #999;
-    margin-bottom: 15px;
+    margin-top: 7px;
 }
+
+.links LI:first-child {
+    margin-top: 10px;
+}
+
 
 /* LISTS FIX END*/
 
